# dragalia-cdn

./: .gitignore  Cargo.toml
.github/workflows/: build-manual.yaml  build.yaml  release.yaml
src/: dragalia_cdn.rs  log.rs  main.rs  server_config.rs  timestamp.rs
src/dragalia_cdn/: config.rs  log.rs  server.rs
